--- a/index.html
+++ b/index.html
@@ -1,53 +1,74 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Terrario</title>
-    <link rel="stylesheet" href="./src/css/styles.css">
-    <script src="./src/js/script.js"></script>
-</head>
-<body>
-   <div id="page">
+    <link rel="stylesheet" href="./src/css/styles.css" >
+    <script src="./src/js/script.js" defer></script>
+  </head>
+  <body>
+    <div id="page">
         <h1>Mi terrario</h1>
-
-       <div id="left-container" class="container">
-
-        <div class="plant-holder"><img src="src/img/plant1.png" alt="plant" class="plant" id="plant1"></div>
-        <div class="plant-holder"><img src="src/img/plant2.png" alt="plant" class="plant" id="plant2"></div>
-        <div class="plant-holder"><img src="src/img/plant3.png" alt="plant" class="plant" id="plant3"></div>
-        <div class="plant-holder"><img src="src/img/plant4.png" alt="plant" class="plant" id="plant4"></div>
-        <div class="plant-holder"><img src="src/img/plant5.png" alt="plant" class="plant" id="plant5"></div>
-        <div class="plant-holder"><img src="src/img/plant6.png" alt="plant" class="plant" id="plant6"></div>
-        <div class="plant-holder"><img src="src/img/plant7.png" alt="plant" class="plant" id="plant7"></div>
-
-       </div>
-
-       <div id="right-container" class="container">
-
-        <div class="plant-holder"><img src="src/img/plant8.png" alt="plant" class="plant" id="plant8"></div>
-        <div class="plant-holder"><img src="src/img/plant9.png" alt="plant" class="plant" id="plant9"></div>
-        <div class="plant-holder"><img src="src/img/plant10.png" alt="plant" class="plant" id="plant10"></div>
-        <div class="plant-holder"><img src="src/img/plant11.png" alt="plant" class="plant" id="plant11"></div>
-        <div class="plant-holder"><img src="src/img/plant12.png" alt="plant" class="plant" id="plant12"></div>
-        <div class="plant-holder"><img src="src/img/plant13.png" alt="plant" class="plant" id="plant13"></div>
-        <div class="plant-holder"><img src="src/img/plant14.png" alt="plant" class="plant" id="plant14"></div>
-
-       </div>
-       <div id="terrario">
-
-           <div class="jar-top"></div>
-
-           <div class="jar-walls">
-               <div class="jar-gloss-long"></div>
-               <div class="jar-gloss-short"></div>
-           </div>
-            <div class="dirt"></div>
-           <div class="jar-bottom"></div>
-       </div>
-   </div>
-
-  
-</body>
+      <div id="left-container" class="container">
+        <div class="plant-holder">
+          <img src="src/img/plant1.png" alt="plant" class="plant" id="plant1" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant2.png" alt="plant" class="plant" id="plant2" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant3.png" alt="plant" class="plant" id="plant3" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant4.png" alt="plant" class="plant" id="plant4" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant5.png" alt="plant" class="plant" id="plant5" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant6.png" alt="plant" class="plant" id="plant6" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant7.png" alt="plant" class="plant" id="plant7" >
+        </div>
+      </div>
+     
+     
+      <div id="right-container" class="container">
+        <div class="plant-holder">
+          <img src="src/img/plant8.png" alt="plant" class="plant" id="plant8" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant9.png" alt="plant" class="plant" id="plant9" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant10.png" alt="plant" class="plant" id="plant10" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant11.png" alt="plant" class="plant" id="plant11" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant12.png" alt="plant" class="plant" id="plant12" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant13.png" alt="plant" class="plant" id="plant13" >
+        </div>
+        <div class="plant-holder">
+          <img src="src/img/plant14.png" alt="plant" class="plant" id="plant14" >
+        </div>
+      </div>
+      <div id="terrarium">
+        <div class="jar-top"></div>
+        <div class="jar-walls">
+            <div class="jar-glossy-long"></div>
+            <div class="jar-glossy-short"></div>
+        </div>
+        <div class="dirt"></div>
+        <div class="jar-botton"></div>
+      </div>
+    </div>
+   
+  </body>
 </html>
